tests/ui/semigroup/unimplemented_semigroup.stderr
error[E0277]: the trait bound `Option<u32>: Semigroup` is not satisfied
 --> tests/ui/semigroup/unimplemented_semigroup.rs:3:35
  |
3 | #[derive(Debug, Clone, PartialEq, Semigroup)]
  |                                   ^^^^^^^^^ the trait `Semigroup` is not implemented for `Option<u32>`
  |
  = help: the following other types implement trait `Semigroup`:
            Annotated<T, A>
            Coalesce<T>
            NamedStruct<'a>
            Overwrite<T>
            Prod<T>
            semigroup::Reverse<T>
            semigroup::op::annotation::concat::Concat<T>
            semigroup::op::semigroup::sum::Sum<T>
            semigroup_base::monoid::OptionMonoid<T>
  = note: this error originates in the derive macro `Semigroup` (in Nightly builds, run with -Z macro-backtrace for more info)
